--- a/Master.tex
+++ b/Master.tex
@@ -54,25 +54,14 @@
   \newtheorem{lemma}{Lemma}[chapter]
 \makeatother
 
-% \newtheoremstyle{examplestyle}% name of the style to be used
-%   {}% measure of space to leave above the theorem. E.g.: 3pt
-%   {}% measure of space to leave below the theorem. E.g.: 3pt
-%   {}% name of font to use in the body of the theorem
-%   {10pt}% measure of space to indent
-%   {}% name of head font
-%   {}% punctuation between head and body
-%   {}% space after theorem head; " " = normal interword space
-%   {}% Manually specify head
 
 % symbol used for function calculating total state
 \newcommand{\ts}{X}
 
 % Symbol for a predicate connection
-\newcommand{\pc}{\hookrightarrow}
-% \newcommand{\pc}{\xrightharpoondown{p}}
+\newcommand{\pc}{\times}
 % Symbol for a binding connection
-% \newcommand{\bc}{\xrightharpoondown{b}}
-\newcommand{\bc}{\rightharpoonup}
+\newcommand{\bc}{\bullet}
 
 \renewcommand{\algorithmicrequire}{\textbf{input:}}
 \renewcommand{\algorithmicensure}{\textbf{output:}}
