--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -1,7 +1,7 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
-<TODO: Introduction, explaining what non-conditional learning is about and what the structure of the section will be>
+<TODO:\@ Introduction, explaining what non-conditional learning is about and what the structure of the section will be>
 
 For an action schema $A$, $\mathbb{P}_A$ is the set of all fluent predicates in the domain that can be applied with the arguments of $A$. Typically, the grounded version of an action schema $A$ is denoted $a$.
 
@@ -15,9 +15,9 @@ p \left( x_1, \dots, x_{|p|} \right)
 \]
 
 
-(TO Thomas: Also note we use $U$ for unproven predicates, $D$ for disproven predicates and $K$ for proven predicates, )
+(TO Thomas: Also note we use $U$ for unproven predicates, $D$ for disproven predicates and $K$ for proven predicates)
 
-\section{Learning effects (Major rewrite required/Add examples/Add theorems/Use disproven etc../ all in all a dated file )} \label{sec:NC:Effects}
+\section{Learning effects}\label{sec:NC:Effects}
     \subfile{NonConditional/Effects}
 
     \section{Learning Preconditions}\label{sec:NC:Preconditions}
