--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -3,6 +3,29 @@
 
 \begin{document}
 
+\texttt{Thomas: } Note that this section is missing a proper introduction. We are considering actions containing one or more conditional effects (called conditionals in the rest of this section). We use them in the form 
+\begin{equation*}
+    \forall x, y, z, \dots \left[ q(x, y) \right] \quad when \quad 
+        \left[ p(z, x) \land f(y) \land \dots \right]
+\end{equation*}
+
+To keep it simple, we only support effects which are conjunctions of conditionals of the above form.
+
+We do not support actions with parameters.
+
+\begin{definition}
+    An explicit state is a set of predicates where the negative predicates are explicitly mentioned. To avoid generating the infinite set, it is limited by a set of predicate names $P$ and a set of objects $\mathcal{O}$:
+    \begin{equation*}
+        X\left(S, P, \mathcal{O}\right) = S \cup
+        \left\{ \neg p \mid 
+            p\left(o_1, \dots, o_{|p|}\right) \notin s \land 
+            \left\{o_1, \dots, o_{|p|} \right\} \in \mathcal{O} \land
+            p \in P
+        \right\}
+    \end{equation*}
+    The arguments $P$ and $\mathcal{O}$ are normally left out when their values are clear from the context.
+\end{definition}
+
 In STRIPS-Style actions the objects $A(O_1,O_2,\ldots,O_{n-1},O_n)$ are the only objects affected by the action.
 Thus any predicate that contains objects other than $O_1,O_2,\ldots,O_{n-1},O_n$ can be discarded as irrelevant when learning either the effects or the preconditions.
 However as actions with conditional effects support the use of quantifiers this claim no longer holds.
@@ -326,73 +349,66 @@ Thus this approach to modelling the unknown preconditions, which we used for non
 \end{example}
 
 \subsubsection{A new model: Connecting paths}
-As is evident our model of using set of predicates, that was used for modelling non-conditional effects, is not suitable when discussing conditional effects. As such we propose using Binding sets when modelling preconditions and effects for a conditional effect.
+From the discussion above, it is evident that the model used for preconditions of non-conditional actions is not sufficient for our needs. Specifically, it does not allow us to easily combine knowledge obtained about the same conditional from different interpretations. 
+The problem, as shown above, is that this approach compares sets of predicates to prove and disprove preconditions, and determines equality of the predicates based on variable naming. However, the variable names are arbitrary and only interesting in that they describe how predicates in a set are connected to each other, since it is this connectivity that determines precondtitions.
 
-From the discussion above, it is evident that the model used for preconditions of non-conditional actions is not sufficient for our needs. Specifically, it does not allow us to easily combine knowledge obtained about the same conditional from different interpretations. The problem, as shown above, is that 
+In the following, we will explain a model based solely on connectivity between predicates. To begin with, we will explore how predicates can be connected:
 
-\begin{definition}[Binding connection]\label{def:ca:varConns}
+\begin{definition}[Binding connection]\label{def:ca:bindingConn}
     A binding connection between indices $i$ and $j$ of two predicates $p$ and $q$ means that the variable or object at the $i$'th argument of $p$ is the same as that at the $j$'th argument of $q$. In the following, the shorthand $p_i \bc q_j$ is used to denote binding connections.
 \end{definition}
 
-\begin{definition}[Predicate connection]
+\begin{definition}[Predicate connection]\label{def:ca:predicateConn}
     Similarly, the notation $p_1 \pc p_2$ denotes the rather obvious fact that the first and second argument of $p$ are both part of the same predicate $p$.
 \end{definition}
 
+Although Definition~\ref{def:ca:predicateConn} seems insignificant, it allows us to define transitive connectivity: If $p_i \pc p_j$ and $p_j \bc q_k$ then $p_i$ and $q_k$ are connected through $p_j$. This connectivity is called a \emph{connecting path} and is denoted $p_i \pc p_j \bc q_k$.
+
 \begin{definition}[Connecting path]\label{def:ca:connectingPath}
-    A connecting path is a 
-    
+    A connecting path is a sequence of alternating binding and predicate connections, where any two adjacent connections shares a component, i.e.\
+    \begin{equation*}
+        \left< 
+            \left( f_i \bc p_j \right), 
+            \left( p_j \pc p_k \right), 
+            \left( p_k \bc q_l \right) 
+        \right>
+    \end{equation*}
+    where the following is used as a shorthand:
     \begin{equation*}
         f_i \bc p_j \pc p_k \bc q_l
     \end{equation*}
-    is a shorthand for
-    \begin{equation*}
-        \left< \left( f_i \bc p_j \right), \left( p_j \pc p_k \right), \left( p_k \bc q_l \right) \right>
-    \end{equation*}
-    A connection is a sequence of pairs $\left( p, i \right)$ where $p$ is a signed predicate name (such as $\neg \texttt{sokobanAt}$) and $i \in \{ 1, \dots, |p| \}$ is an index in $p$. We will use the shorthand $p_i$ for the tuple $(p,i)$, such that $p_i$ means ``the $i$'th argument of $p$''.
 \end{definition}
 
-\begin{example}
-    \begin{equation*}
-        f_1 \bc p_2 \pc p_1 \bc q_1
-    \end{equation*}
+Given a state transition $\left(S, a, S'\right)$, it now holds that for any effect $p \in \Delta S$ there exists one or more connecting paths between any argument of $p$ and any argument of any predicate $q \in \ts(S)$. Any one of these paths describe a possible precondition, and the set of all paths comprises the set of unproven preconditions $U$ for $p$. 
+
+If another effect with the same name as $p$ occurs in $\Delta S$, we can now intersect their two path sets to arrive at a correctly merged precondition set $U'$.
+
+\begin{example}\label{ex:ca:non-binding-interesction-model-fixed}
+    <Insert example here>
 \end{example}
-
-\begin{definition}\label{thm:ca:binding-set}
-	Binding set $B$ is a theoretical set of all bindings which differentiate between bindings from different predicates, such that the name of predicates also determines whether or not two bindings are equal. Information pertaining to the name of the variable from which the binding exists does not conflict, therefore if two $B$ sets intersected but they had completely different naming of variables then the resulting set would still be as though their name matched.
-	For instance $\{p(x,x), q(x,y)\} \cap \{p(y,x), q(y,x)\} = \{p(x,y), q(x,z)\}$, notice that in both they have a binding on the first argument, and that binding is kept when they are intersected, even though the naming of the binding was different.
-\end{definition}
-The problem with binding sets is that they are difficult to model if there are multiples of the same predicate. As we have restriction~\ref{rst:ca:no-multiple-effect} this is not a problem for effects, but for preconditions this proves to be a major problem. However, as we only intend to use binding sets to explain the problems we will assume that ambiguous predicates are always correctly handled when a set operation is used.
-
-Using binding sets we are now capable of getting a correct intersection of two possible precondition sets and get their common possible preconditions. The possible preconditions also known as the unknown set $U_p$, can always be turned into a binding set $B_p$.
-And to get the remaining possible bindings between $B_p1$ and $B_p2$ and disproves all other bindings:
-
-\begin{equation}
-B_p' = B_p1 \cap B_p2
-\end{equation}
-This will unlike~\eqref{eq:unknownpredcondset} correctly ignore variable naming, and be able to partially remove some of the restrictions on the predicate I.E. removing bindings, solving the problem demonstrated in Example~\ref{ex:ca:nonbinding-intersection-model}.
 
 \subsubsection{Proving preconditions}
 Up until now we have only discussed limiting the number of possible preconditions (Unknown set) , however another aspect of learning is to determine what the actual preconditions are.
-For non-conditional actions proving the preconditions of an action was a matter of using failed actions to make a list of candidate predicates that through elimination eventually got down to just one predicate which is then proclaimed proven. The approach is similar for conditional actions however instead of having candidates of predicates; conditional actions must maintain a candidate set for the bindings instead of entire predicates, and thus is only capable of proving a single binding at a time.
+For non-conditional actions proving the preconditions of an action was a matter of using failed actions to make a list of candidate predicates that through elimination eventually got down to just one predicate which is then proclaimed proven. The approach is similar for conditional actions however instead of having candidates of predicates; conditional actions must maintain a candidate set for the connecting paths instead of entire predicates, and thus is only capable of proving a single path at a time.
 
 \begin{theorem}\label{thm:minimum-one-binding}
-	If an action has been observed to produces an effect $E$, then if that effect does not occur in future transitions;
-	a minimum of one binding in a predicate must be a precondition for that condition effect. Assuming restriction~\ref{rst:ca:no-disjoint-preconditions} holds.
-
-	\begin{proof}[\textbf{Proof by contradiction}] If there is less than one binding in the preconditions then that means there are zero bindings, if Restriction~\ref{rst:ca:no-disjoint-preconditions} holds then zero bindings means zero precondition. If there are zero preconditions then the effect would not have failed. Therefore there must be a minimum of one binding. \qedhere
-	\end{proof}
+    If a conditional has been observed to produce an effect (in the form of a grounded predicate $p$), and failed to produce another grounded predicate, then there must exist at least one connecting path from $p$ which is a precondition for that conditional.
 \end{theorem}
 
-Initially we have a binding set $B_u$, which is our set of unproven preconditions for the effect of an action.
-If we then see that an effect does not occur in the state, the bindings in the prior state that did not produce that effect becomes the candidates of possible bindings $B_c$.
+\begin{proof}[\textbf{Proof by contradiction}] 
+    If there is less than one path in the preconditions then that means there are zero paths. By Restriction~\ref{rst:ca:no-disjoint-preconditions}, zero paths means zero precondition. If there are zero preconditions then the effect would not have failed. Therefore there must be a minimum of one path that is a precondition.
+\end{proof}
+
+Initially we have a set of paths $B_u$, which is our set of unproven preconditions for the effect of a conditional.
+If we then see that an effect does not occur in the state, the paths in the prior state that did not produce that effect becomes the candidates of possible bindings $B_c$.
 
 Because of Theorem~\ref{thm:minimum-one-binding} the following invariant holds:
 \begin{equation} \label{eq:binding_invariant}
-\left| \{b  \mid  b \in B_c \land b \in preconds_{bindings}(A)\} \right|  \ge 1
+\left| \{b  \mid  b \in B_c \land b \in preconds_{paths}(A)\} \right|  \ge 1
 \end{equation}
 
 
-Meaning that at least one of the bindings in this set is part of the bindings in the preconditions for the action $A$. As bindings that are not contained in $B_u$ is disproven, we can filter disproven candidates by:
+Meaning that at least one of the paths in this set is part of the paths in the preconditions for the conditional. As paths that are not contained in $B_u$ are disproven, we can filter disproven candidates by:
 \begin{equation}
     B_c' = B_c \cap B_u
 \end{equation}
