--- a/refs.bib
+++ b/refs.bib
@@ -79,3 +79,12 @@ keywords = "robot planning",
 keywords = "heuristic search ",
 abstract = "We describe a new problem solver called \{STRIPS\} that attempts to find a sequence of operators in a space of world models to transform a given initial world model in which a given goal formula can be proven to be true. \{STRIPS\} represents a world model as an arbitrary collection in first-order predicate calculus formulas and is designed to work with models consisting of large numbers of formula. It employs a resolution theorem prover to answer questions of particular models and uses means-ends analysis to guide it to the desired goal-satisfying model. "
 }
+@book{bretto,
+  title = {Hypergraph Theory : An Introduction},
+  language = {English},
+  publisher = {Springer},
+  author = {Bretto, Alain.},
+  pages = {1 online resource (1 texte électronique)},
+  year = {2013},
+  isbn = {3319000802, 9783319000800, 9783319000794}
+}
