--- a/Learning/PDDLWorld.tex
+++ b/Learning/PDDLWorld.tex
@@ -3,7 +3,7 @@
 
 In order to discuss learning we must define a model for the domain which we operate within. We have chosen to use the generally accepted PDDL or Planning Domain Definition Language (see~\cite{PDDL}), as it is well researched.
 
-This section will give a minimal definition of PDDL, and provide context for syntax used in later chapter. We will also explain functions used in state manipulation such as the grounding and state-transition functions.
+This section will give a minimal definition of PDDL, and provide context for syntax used in later chapters. We will also explain functions used in state manipulation such as the grounding and state-transition functions.
 
 
 PDDL is based on set-theoretic planning (see~\cite{ghallab2004a}) popularized by the STRIPS language (see~\cite{STRIPS}). By default states in PDDL are based on closed-world-assumption, meaning that if something is not defined in the state it is assumed to be false. 
@@ -17,7 +17,18 @@ In PDDL and set-theoretic planning, a state is set of predicates defining the pr
     Where $\mathcal{O}$ is the set of all objects in the world, and $\mathbb{P}$ is the set of all predicates that can be used to describe the objects in the world.
 \end{definition}
 
-The ways an agent can change the state, and under which circumstances, is decribed by \textit{action schemas}. 
+Since states are based on closed-world-assumption, they contain no negative predicates; however for the purpose of this thesis we would like to be able to represent a complete state which contain explicitly all the negatives predicates. 
+We define this explicit state as $X$, which is derived from its original state $S$.
+\begin{definition} 
+	Explicit state function $X(S)$ outputs the state where absent predicates become negative literals while maintaining the old predicates as positive literals. It is defined as follows: 
+	
+	\begin{equation*}
+	X(S)=\{p \mid p \in S \} \cup \{\neg p \mid  p \notin S \}
+	\end{equation*}
+	\textbf{NB} For simplicity $S$ as a function argument can be omitted if implied through context. 
+\end{definition}
+
+The ways an agent can change the state, and under which circumstances, is described by \textit{action schemas}. 
 	
 \begin{definition} \label{def:lrn:action-spec-def}
 		An action definition or action schema defines when an action is to be applied, as well as the consequences of the application. As such an action schema contains a logical formula specifying its preconditions, which must be satisfied for the action to be applied. If the preconditions are satisfied, the changes listed in the logic formula denoting the effects are applied. The structure of an action schema is the following:
@@ -37,26 +48,29 @@ The ways an agent can change the state, and under which circumstances, is decrib
     \end{equation*}
 
 	The parameters of an action schema is a list of variables used in the Pre and Eff. Pre is description of the action schema preconditions and Eff is a description of its effects. 
-    Goal Description or GD is specifically designed logic formula for describing preconditon. Effect or EFF is another logical construct for describing effects of an action.
+    Goal Description or GD is a specifically designed logic formula for describing precondition. Effect is another logical construct for describing effects of an action.
 
-		The BNF for GD and EFF is as follows:
+		The BNF for GD and Effect is as follows:
 		
 	%DONT USE TABS on the following listing as it is directly affected by it
 		\begin{lstlisting}
-            <GD> -> (and <GD>*) 
+            <GD> -> <GD> and <GD>
             <GD> -> LITERAL
             
-            <EFF> -> (and <EFF>*)
-            <EFF> -> LITERAL
+            
+            <Effect> -> <Effect> and <Effect>
+            <Effect> -> LITERAL
+            <Effect> -> Forall <variable>* <Effect> 
+            <Effect> -> <Effect> When <GD>
             
             <LITERAL> -> <predicate name> (TERM*)
-            <LITERAL> -> (not <LITERAL>)
+            <LITERAL> -> not <LITERAL>
             
             <TERM> -> <object>
             <TERM> -> <variable>
 		\end{lstlisting}
 		
-		The distinction between GD and EFF is important to PDDL action schemas to allow either to receive additional features without the other gaining the same.
+		This is a limited definition of PDDL action schemas, however we have only defined what is required to understand this thesis.
 	\end{definition}
 	
 In PDDL a set of action schemas, along with properties about always present objects and specifications of all Predicates are defined as a domain.
@@ -65,7 +79,7 @@ In PDDL a set of action schemas, along with properties about always present obje
 	
 $
 \begin{array}{ll}
-Domain~D: & \\
+Domain~\mathcal{D}: & \\
 
 \begin{array}{ll}
 Constants & = \{o_1,\dots,o_n\}			 \\  
@@ -133,17 +147,16 @@ Furthermore, we define a single Transition as follows:
 
 Lastly in order for an agent to know its purpose when planning it must have a defined goal. Such a goal is defined within a PDDL Problem.
 
-\begin{definition} A problem contains the knowledge of the domain it applies to, the objects that is specific to the problem, the initial state of the planner and the goal expressed as a goal description (see Def.  \ref{def:lrn:action-spec-def}).
+\begin{definition} A problem contains the objects that is specific to the problem, the initial state of the planner and the goal expressed as a goal description (see Def.  \ref{def:lrn:action-spec-def}).
 	
 	$
 	\begin{array}{ll}
-	Problem ~ P: & \\
+	Problem ~ \mathcal{P}: & \\
 	
 	\begin{array}{ll}
-	Doman & = Name ~ of ~ the ~ domain ~ it ~ is ~ based ~ on \\
 	Objects ~ \mathcal{O} & = \{o_1,\dots,o_n\}			 \\  
-	Init-State& = A ~ Set ~ of ~ Grounded ~ Predicates \\
-	Goal ~ \mathcal{G} & = Goal ~ Description(GD)
+	Init\texttt{-}State~ S_0& = A State\\
+	Goal ~ \mathcal{G} & = Goal ~ Description\footnote{Goal Description is identical to the one defined in Definition \ref{def:lrn:action-spec-def}.}
 	\end{array}
 	\end{array}$
 \end{definition}
@@ -157,8 +170,15 @@ To use a PDDL specification an agent can with a domain and an accompanying probl
 
 Given this machinery an agent is thus capable of modeling the world and define actions that is applicable in the world. These definitions provides a framework for learning of action schema, which we will go into detail with, for both non-conditional and conditional action schemas.
 
+\subsection{non-conditional vs Conditional actions}
 
-	
+As we will go in depth through out this paper how to achieve both non-conditional and conditional action learning, as such we want to establish the difference such that they can be properly discussed. 
+
+A non-conditional action, as the name implies are actions which contain no conditional effects. This means that the effect of the action will always be the same. From a learning perspective this makes understanding the action easier because if an effect is observed then it is always guaranteed no matter the circumstances.  Specifically this means not using the $Forall$ and $When$ part of BNF for $<Effect>$, if those are not used then we define an action as being non-conditional. Conversely if those are used then an action is defined as being conditional.
+
+Whether an action support conditional effects or not has a huge impact on how the action can be described. For instance, if the action that is being modelled actually contain conditional effect, then in order to model it as a non-conditional action it has to be described using multiple actions. This becomes evident in our Sokoban example which we will use throughout this thesis, where we see that pushing a box and moving an agent is two different actions even though in the video game it was modelled after this was just one action.
+
+
 	
 
 
