--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -4,17 +4,19 @@
 
 Although a set of connecting paths are adequate for obtaining knowledge about preconditions of conditionals, it requires a large amount of redundancy as many paths share a common subpath to the effect. To remedy this, a set of paths can be joined to a forest of trees (where each tree is rooted in an argument of the effect predicate), where each branch is labelled as either $\bc$ (binding edge) or $\pc$ (predicate edge).
 
-While joining paths as described above removes redundant tails, there are still duplicate vertices in the resulting trees. Specifically, if two subtrees $T_1$ and $T_2$ are rooted in the same vertex (originating from the same argument of the same predicate), then these two subtrees can be merged into one inheriting the children of both $T_1$ and $T_2$. If $T_1$'s parent is also $T_2$'s child, then this merging forms a cylce, and is now a cyclic, undirected graph.
+While joining paths as described above removes redundant tails, there are still duplicate vertices in the resulting trees. Specifically, if two subtrees $T_1$ and $T_2$ are rooted in the same vertex (originating from the same argument of the same predicate), then these two subtrees can be merged into one inheriting the children of both $T_1$ and $T_2$. If $T_1$'s parent is also $T_2$'s child, then this merging forms a cylce, and results in a cyclic, undirected \emph{path graph} $G = (V, E)$. The edges in a path graph can be divided into two sets: those labelled $\bc$, and those labelled $\pc$, denoted $E_B$ and $E_P$, respectively.
 
 Notably, constructing a graph from a set of paths causes vertices to be transitively connected by binding edges:
 
-\begin{proposition}
+\begin{proposition}\label{prop:ca:transitiveConn}
     For a graph constructed from a complete set of connecting paths $B$, it holds that if a vertex $v$ is reachable from a vertex $u$ by only following binding edges, then there is a binding edge between $u$ and $v$. Similarly for predicate edges.
 \end{proposition}
 
 \begin{proof}
    If $v$ is reachable from $u$ by only following a sequence of binding edges $b$, then $b$ is a subpath of some path in $B$. Since $b$ does not contain predicate connections, all the predicate arguments contained in it have the same variable in the predicate set $B$ originated from. Hence, $B$ will also contain a path with subpath $b \bc v$, which will be present as a branch in the path tree, and therefore merged into the path graph as an edge.
 \end{proof}
+
+As a consequence of Proposition~\ref{prop:ca:transitiveConn}, a path graph $G = (V,E)$ consists of subgraphs that are either completely connected by binding edges or completely connected by predicate edges. That is, the subgraphs $G_B = \left(V, E_B \right)$ and $G_P = \left( V, E_P \right)$ consists of complete, disconnected subgraphs.
 
 Consequently, a path graph consists of \textit{binding} and \textit{predicate} cliques, i.e.\ vertices in a clique are either $\bc$-connected (making it a binding clique) or they are $\pc$-connected (making it a predicate clique). Note that a clique can be both $\bc$- and $\pc$-connected, in case a predicate has several identical arguments. In the following, we interpret such a clique as two different cliques.
 
