--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -16,8 +16,7 @@ $\mathbb{F}_A$ is the set of all fluent literals available to an action schema $
 				\end{gathered}
 					\left|
 				\begin{gathered} p \in \mathbb{P}~\land \\
-								n = arity(p)~\land  \\
-								(x_1,\dots,x_n) ~is~ a~ permutation ~ of ~Vars(A)
+                    \left\{ x_1,\dots,x_{|p|} \right\} \subseteq params(A)
 				\end{gathered}				
 							\right.\right\}
 	\end{equation*}
