--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -4,7 +4,24 @@
 
 Although a set of connecting paths are adequate for obtaining knowledge about preconditions of conditionals, it requires a large amount of redundancy as many paths share a common subpath to the effect. To remedy this, a set of paths can be joined to a forest of trees (where each tree is rooted in an argument of the effect predicate), where each branch is labelled as either $\bc$ (binding edge) or $\pc$ (predicate edge).
 
+\begin{example}[Path trees from connecting paths]\label{ex:ca:pathTrees}
+    Consider a state transition $\left( S, a, S' \right)$, where 
+    \begin{equation*}
+        S = \left\{ p(x, y), m(y), g(y) \right\}
+    \end{equation*}
+    and $q(x) \in \Delta S$. Then, two connecting paths for effect $q(x)$ and $S$ are the following (ignoring negative preconditions):
+    \begin{align*}
+        & g_1 \bc m_1 \bc p_2 \pc p_1 \bc q_1 \\
+        & m_1 \bc g_1 \bc p_2 \pc p_1 \bc q_1
+    \end{align*}
+    All other paths for this effect are subpaths of the above. As can be seen, $p_2 \pc p_1 \bc q_1$ is a common tail of both paths, and therefore they can be merged into the path tree depicted in~\figref{fig:ca:graphExTree}.
+\end{example}
+
 While joining paths as described above removes redundant tails, there are still duplicate vertices in the resulting trees. Specifically, if two subtrees $T_1$ and $T_2$ are rooted in the same vertex (originating from the same argument of the same predicate), then these two subtrees can be merged into one inheriting the children of both $T_1$ and $T_2$. If $T_1$'s parent is also $T_2$'s child, then this merging forms a cylce, and results in a cyclic, undirected \emph{path graph} $G = (V, E)$. The edges in a path graph can be divided into two sets: those labelled $\bc$, and those labelled $\pc$, denoted $E_B$ and $E_P$, respectively.
+
+\begin{example}[Path graphs from path trees]\label{ex:ca:pathGraph}
+    For the path tree constructed in Example~\ref{ex:ca:pathTrees}, the two subtrees of $p_2$ ($g_1 \bc m_1$ and $m_1 \bc g_1$) are mutually redundant, as both denote that $g_1$, $m_1$ and $p_2$ are $\bc$-connected. Therefore, they can be replaced with the cycle depicted in~\figref{fig:ca:graphExGraph}. 
+\end{example}
 
 Notably, constructing a graph from a set of paths causes vertices to be transitively connected by binding edges:
 
@@ -20,9 +37,9 @@ As a consequence of Proposition~\ref{prop:ca:transitiveConn}, a path graph $G = 
 
 Consequently, a path graph consists of \textit{binding} and \textit{predicate} cliques, i.e.\ vertices in a clique are either $\bc$-connected (making it a binding clique) or they are $\pc$-connected (making it a predicate clique). Note that a clique can be both $\bc$- and $\pc$-connected, in case a predicate has several identical arguments. In the following, we interpret such a clique as two different cliques.
 
-As the graph can be meaningfully partitioned into complete subgraphs, the vertices of each subgraph can simply be seen as a set, where each set overlaps with the others. Thus, the path graph $G = (V, E)$, where $V$ is the vertex set and $E$ is the set of labelled edges becomes $HG = \left(V, E_H\right)$, where each member of $E_H$ is a set of vertices comprising either a binding or predicate clique in $G$ (labelled $\bc$ or $\pc$ respectively). Then, $HG$ describes a \emph{conformal hypergraph} (see e.g.\ \cite{bretto}), where $E_H$ is a set of hyperedges.
+As the graph can be meaningfully partitioned into complete subgraphs, the vertices of each subgraph can simply be seen as a set, where each set overlaps with the others. Thus, the path graph $G = (V, E)$ can be 
 
-A hypergraph constructed as described above 
+where $V$ is the vertex set and $E$ is the set of labelled edges becomes $HG = \left(V, E_H\right)$, where each member of $E_H$ is a set of vertices comprising either a binding or predicate clique in $G$ (labelled $\bc$ or $\pc$ respectively). Then, $HG$ describes a \emph{conformal hypergraph} (see e.g.\ \cite{bretto}), where $E_H$ is a set of hyperedges.
 
 \begin{figure}
     \centering
