--- a/Master.tex
+++ b/Master.tex
@@ -93,18 +93,18 @@
 \chapter{Learning} \label{sec:Learning}
     \subfile{Learning}
 
-\chapter{Non-conditional actions}
+\chapter{Non-conditional actions} \label{chp:nca}
     \subfile{NonConditional}
 
-\chapter{Conditional actions}
+\chapter{Conditional actions}\label{chp:ca}
     \subfile{Conditional}
 
-\chapter{Methods (Implementation)}
+\chapter{Methods (Implementation)}\label{chp:imp}
     \subfile{Implementation}
 
-\chapter{Results}
+\chapter{Results}\label{chp:res}
 
-\chapter{Discussion}
+\chapter{Discussion}\label{chp:dis}
 
 \chapter{Conclusion}
 
