--- a/Conditional.tex
+++ b/Conditional.tex
@@ -20,6 +20,6 @@
 	\subfile{Conditional/CollapsingHypergraphs}
 
 \section{Hypothesis construction}
-	% \subfile{Conditional/HypothesisConstruction}
+	\subfile{Conditional/ConditionalHypothesisConstruction}
 
 \end{document}
