--- a/Introduction.tex
+++ b/Introduction.tex
@@ -57,16 +57,20 @@
  
  \begin{description}
  	\item[\nameref{sec:Learning}]
-	 	This section gives an simplified view of scientific learning, how strategies in learning and what differentiate them. It also provides definition of how we use PDDL in rest of the thesis and provides a sokoban model in PDDL.
-	 	Lastly this section also provides an algorithm for learning and 
+	 	This chapter gives an simplified view of scientific learning, how strategies in learning and what differentiate them. It also provides definition of how we use PDDL in rest of the thesis and provides a sokoban model in PDDL.
+	 	Lastly this section also provides an algorithm for learning, and shows how it can be applied to a sokoban domain.
 	
 	\item[\nameref{chp:nca}]
-	
+		Shows how action schema learning can be achieved for actions that contain no conditional effects. It shows how to learn both the preconditions and the effects of such an action. Lastly it shows how different learning strategies can be used when constructing the action schema for the action.
+		
 	\item[\nameref{chp:ca}]
+		This chapter provides a detailed description of the problems when attempting to learn conditional effects, and provides several different models that improves understanding of the problem. Especially we would like to highlight our Hypergraph model as it provides a mathematical framework for efficient and explicit description of the problem of conditonal effects .
 	
 	\item[\nameref{chp:imp}]
+		Provides a description of what we have designed and what we used for our results, it also explains some of efficiencies we added to improve the runtime of the problem.
 	
 	\item[\nameref{chp:res}]
+		
 	
 	\item[\nameref{chp:dis}]
  
