--- a/Learning.tex
+++ b/Learning.tex
@@ -4,18 +4,16 @@
 <\texttt{TODO:} Explain scientific learning, how to learn scientifically? >
 \section{Strategy}
     \subfile{Learning/Strategy}
-\section{Algorithm}
-    \subfile{Learning/Algorithm}\label{sec:Algorithm}
+\section{Algorithm}\label{sec:Algorithm}
+    \subfile{Learning/Algorithm}
 
 \section{PDDL}
 \subfile{Learning/PDDLWorld}
 
-\section{Sokoban in PDDL}
-    \subfile{Learning/SokobanPDDL}\label{sec:SokobanPDDL}
+\section{Sokoban in PDDL}\label{sec:SokobanPDDL}
+    \subfile{Learning/SokobanPDDL}
 
-
-
-\section{PDDL-specific algorithm}
+\section{PDDL-specific algorithm}\label{sec:PDDLAlgo}
     \subfile{Learning/PDDLAlgorithm}
 
 \end{document}
