--- a/Master.tex
+++ b/Master.tex
@@ -113,8 +113,8 @@
 \chapter{Future work}
 
 \begin{appendices}
-    \chapter{Results}
-    \subfile{Appendices/Results}
+    \chapter{Results}\label{sec:app:results}
+        \subfile{Appendices/Results}
 \end{appendices}
 
 \bibliography{refs}{}
