--- a/Conditional/ConditionalHypothesisConstruction.tex
+++ b/Conditional/ConditionalHypothesisConstruction.tex
@@ -1,6 +1,6 @@
 \documentclass[../Master.tex]{subfiles}
-\begin{document}
 \providecommand{\master}{..}
+\begin{document}
 
 Unsurprisingly hypothesis construction of conditional actions is very similar to that of non-conditional actions. 
 
@@ -17,9 +17,9 @@ However since we know connecting paths are intractable we cannot simply extract 
 The difference is that because preconditions are seen as a hypergraph representing all the unproven preconditions, 
 then it follows that candidates in this context must be leaves connected the  
 
-\input{../Graphics/hypUnproven.pgf}  
+\input{\master/Graphics/hypUnproven.pgf}  
 
-\input{../Graphics/hypCands.pgf}  
+\input{\master/Graphics/hypCands.pgf}  
 
 
 \end{document}
